--- a/docs/style.css
+++ b/docs/style.css
@@ -24,9 +24,14 @@ body {
     background: var(--body-bg);
 }
 
+.wrapper {
+    width: 98%;
+}
+
 header {
     background: var(--head-bg);
     color: var(--head-txt);
+    text-align: center;
 }
 
 main {
@@ -37,4 +42,5 @@ main {
 footer {
     background: #bbb;
     color: #222;
+    text-align: center;
 }
