--- a/docs/style.css
+++ b/docs/style.css
@@ -1,177 +1,173 @@
 @charset "UTF-8";
 
 :root {
-    --head-txt: #222;
-    --head-bg:  #fab464;
-    --main-txt: #222;
-    --main-bg:  #c0f2fb;
-
-    --body-bg: #eee;
-
-    --nav-ul:  1px solid #333;
+  --head-txt: #222;
+  --head-bg: #fab464;
+  --main-txt: #222;
+  --main-bg: #c0f2fb;
+  --body-bg: #eee;
+  --nav-ul: 1px solid #333;
 }
 @media (prefers-color-scheme: dark) {
-    :root {
-        --head-txt: #fcddbb;
-        --head-bg:  #24211c;
-        --main-txt: #c0f2fb;
-        --main-bg:  #222;
-
-        --body-bg: #111;
-
-        --nav-ul:  1px solid #999;
-    }
+  :root {
+    --head-txt: #fcddbb;
+    --head-bg: #24211c;
+    --main-txt: #c0f2fb;
+    --main-bg: #222;
+    --body-bg: #111;
+    --nav-ul: 1px solid #999;
+  }
 }
 
 
 body {
-    background: var(--body-bg);
+  background: var(--body-bg);
 }
 
 .wrapper {
-    position: relative;
-    width: 98%;
-    height: 100%;
-    -webkit-transition: all .5s ease;
-    transition: all .5s ease;
-    z-index: 2;
+  position: relative;
+  width: 98%;
+  height: 100%;
+  -webkit-transition: all .5s ease;
+          transition: all .5s ease;
+  z-index: 2;
 }
 
 header {
-    background: var(--head-bg);
-    color: var(--head-txt);
-    text-align: center;
-    padding: 7vh 0;
+  background: var(--head-bg);
+  color: var(--head-txt);
+  text-align: center;
+  padding: 7vh 0;
 }
 
 main {
-    background: var(--main-bg);
-    color: var(--main-txt);
-    padding: 50px 0;
+  background: var(--main-bg);
+  color: var(--main-txt);
+  padding: 50px 0;
 }
 
 footer {
-    background: #bbb;
-    color: #222;
-    text-align: center;
-    padding: 3vh 0;
+  background: #bbb;
+  color: #222;
+  text-align: center;
+  padding: 3vh 0;
 }
 
 
 nav {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: -300px;
-    bottom: 0;
-    background: #eee;
-    width: 300px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
-    transition: all .5s;
-    z-index: 4;
-    opacity: 0;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: -300px;
+  bottom: 0;
+  background: #eee;
+  width: 300px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  transition: all .5s;
+  z-index: 4;
+  opacity: 0;
 }
 .open nav {
-    left: 0;
-    opacity: 1;
+  left: 0;
+  opacity: 1;
 }
 nav .inner {
-    padding: 25px;
+  padding: 25px;
 }
 nav .inner ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 nav .inner ul p {
-    color: var(--nav-in);
+  color: var(--nav-in);
 }
 nav .inner ul li {
-    position: relative;
-    margin: 0;
-    border-bottom: var(--nav-ul);
+  position: relative;
+  margin: 0;
+  border-bottom: var(--nav-ul);
 }
 nav .inner ul li a {
-    display: block;
-    color: var(--nav-in);
-    font-size: 14px;
-    padding: 1em;
-    text-decoration: none;
-    transition-duration: 0.2s;
-    font-family: sans-serif;
+  display: block;
+  color: var(--nav-in);
+  font-size: 14px;
+  padding: 1em;
+  text-decoration: none;
+  transition-duration: .2s;
+  font-family: sans-serif;
 }
 nav .inner ul li a:hover {
-    background: #e4e4e4;
+  background: #e4e4e4;
 }
 @media screen and (max-width: 767px) {
-    nav {
-        left: -220px;
-        width: 220px;
-    }
+  nav {
+    left: -220px;
+    width: 220px;
+  }
 }
 
 
 .toggle_btn {
-    display: block;
-    position: fixed;
-    top: 30px;
-    right: 30px;
-    width: 30px;
-    height: 30px;
-    transition: all .5s;
-    cursor: pointer;
-    z-index: 4;
+  display: block;
+  position: fixed;
+  top: 30px;
+  right: 30px;
+  width: 30px;
+  height: 30px;
+  transition: all .5s;
+  cursor: pointer;
+  z-index: 4;
 }
 
 .toggle_btn span {
-    display: block;
-    position: absolute;
-    left: 0;
-    width: 30px;
-    height: 2px;
-    background-color: #222;
-    border-radius: 4px;
-    transition: all .5s;
+  display: block;
+  position: absolute;
+  left: 0;
+  width: 30px;
+  height: 2px;
+  background-color: #222;
+  border-radius: 4px;
+  transition: all .5s;
 }
 .toggle_btn span:nth-child(1) {
-    top: 4px;
+  top: 4px;
 }
 .toggle_btn span:nth-child(2) {
-    top: 14px;
+  top: 14px;
 }
 .toggle_btn span:nth-child(3) {
-    bottom: 4px;
+  bottom: 4px;
 }
 .open .toggle_btn span {
-    background-color: #fff;
+  background-color: #fff;
 }
 .open .toggle_btn span:nth-child(1) {
-    -webkit-transform: translateY(10px) rotate(-315deg);
-    transform: translateY(10px) rotate(-315deg);
+  -webkit-transform: translateY(10px) rotate(-315deg);
+          transform: translateY(10px) rotate(-315deg);
 }
 .open .toggle_btn span:nth-child(2) {
-    opacity: 0;
+  opacity: 0;
 }
 .open .toggle_btn span:nth-child(3) {
-    -webkit-transform: translateY(-10px) rotate(315deg);
-    transform: translateY(-10px) rotate(315deg);
+  -webkit-transform: translateY(-10px) rotate(315deg);
+          transform: translateY(-10px) rotate(315deg);
 }
 
 #mask {
-    display: none;
-    transition: all .5s;
+  display: none;
+  transition: all .5s;
 }
 .open #mask {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    opacity: .8;
-    z-index: 3;
-    cursor: pointer;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  opacity: .8;
+  z-index: 3;
+  cursor: pointer;
 }
